removed getlast as it didnt work for vincent